# tui-chat

./: .gitignore  Cargo.toml
src/: client.rs  common.rs  gui-test.rs  server.rs
src/client/: client.rs
src/server/: server.rs
