[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tui
crossterm = "0.27.0"
ratatui = "0.23.0"
tui-textarea = "0.3.1"

#image
ratatui-image = { version = "0.3.3", features = ["rustix", "sixel", "crossterm"] }
image = { version = "0.24.7", features = ["default"] }

#async
futures-util = "0.3.29"
smol = "1.3.0"
async-dup = "1.2.2"
#image display
#viuer = "0.7.1"

#serialization
serde = "1.0.190"
postcard = { version = "1.0.8", features = ["alloc", "use-std", "use-crc"]}
heapless = "0.7.16"

#other
better-panic = "0.3.0"
get-size = "0.1.4"
md5 = "0.7.0"
differ = "1.0.4"

[patch.crates-io]
sixel-sys-static = {path = "./sixel-sys-static-0.3.2", version = "0.3.1"}

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "gui-test"
path = "src/gui-test.rs"

