[package]
name = "chat"
version = "0.1.0"
edition = "2021"

#[profile.release]
#strip = true
#opt-level = "z"
#lto = true
#codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tui
crossterm = "0.27.0"
ratatui = "0.23.0" #as of currently used tui-textarea version, cannot update
tui-textarea = "0.4.0"

#image
ratatui-image = { version = "0.5.0", features = ["crossterm"] }
image = { version = "0.24.7", features = ["default"] }

#async
futures-util = "0.3.29"
smol = "1.3.0"
async-dup = "1.2.4"
#image display
#viuer = "0.7.1"

#serialization
serde = {version = "1.0.193", features = ["std"]}
postcard = { version = "1.0.8", features = ["alloc", "use-std", "use-crc"]}
heapless = "0.8.0"

#other
better-panic = "0.3.0"
get-size = "0.1.4"
home = "0.5.5"
file-format = "0.22.0"
coredump = "0.1.2"

#[patch.crates-io]
#sixel-sys-static = {path = "./sixel-sys-static-0.3.2", version = "0.3.1"}

[[bin]]
name = "client"
path = "src/client.rs"

[features]
default = ["protocol_auto"]
protocol_auto = []
protocol_halfblocks = []
ide = ["protocol_halfblocks"]

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "gui-test"
path = "src/gui-test.rs"

